--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,8 @@
 name: Node.js CI
 
 on:
-  schedule:
+ workflow_dispatch:
+ schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: '5 * * * *'
 
